k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-msa-ingress
spec:
  rules:
    - host: realworld-msa.io
      http:
        paths:
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: auth-server
                port:
                  number: 9000
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: auth-server
                port:
                  number: 9000
